fix:a11y - copy to clipboard icon not visible
The copy to clipboard icon is was not visible on light and dark modes.
The icon would only become visible on hover and even then, it was hard to
see in dark mode due to size and color.

fix #5446

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -506,20 +506,18 @@ pre {
   position: relative;
 
   .copy-icon {
-    background-image: url("../assets/clippy.svg");
-    background-repeat: no-repeat;
-    background-position: 61% 45%;
-    background-size: 1rem;
     border-radius: var(--elem-radius);
     cursor: pointer;
-    height: 33px;
+    height: 1.25rem;
+    mask-image: url("../assets/clippy.svg");
+    mask-size: cover;
     margin: 0;
     padding: 0.25rem;
     position: absolute;
     right: 0.5rem;
     top: 0.75rem;
-    width: 33px;
-    opacity: 0;
+    width: 1.25rem;
+    opacity: 0.5;
 
     &:focus {
       opacity: 1;
